--- a/index.html
+++ b/index.html
@@ -792,7 +792,7 @@
           </div>
           <div class="photoOverlay">
             <b>Gerónimo Kombolitis</b>
-            <span>Empresario joven · Construyendo estándar LATAM</span>
+            <span>Emprendedor joven · Construyendo estándar LATAM</span>
           </div>
         </div>
 
@@ -817,13 +817,11 @@
 
     <section class="panel section reveal delay-1" id="video">
       <h2>Mi postura (video)</h2>
-      <p>Pegá tu video principal acá. Que sea corto y con postura: 60–120 segundos.</p>
 
       <div class="videoWrap">
         <!-- Reemplazá el ID por tu video de YouTube. Ej: https://www.youtube.com/watch?v=VIDEO_ID -->
         <iframe src="https://www.youtube.com/embed/VIDEO_ID" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
-      <div class="videoNote">Tip: subilo en YouTube como “no listado” si querés que solo esté en la web.</div>
     </section>
 
     <div class="cinemaDivider" aria-hidden="true"></div>
@@ -930,8 +928,7 @@
     <div class="cinemaDivider" aria-hidden="true"></div>
 
     <section class="panel section reveal" id="prueba">
-      <h2>Prueba social (poné tu realidad)</h2>
-      <p>Acá podés sumar testimonios o resultados. Te dejo 2 espacios listos (editables).</p>
+      <h2>Prueba social</h2>
 
       <div class="quotes">
         <div class="quote">
@@ -1063,7 +1060,6 @@
 
           <div class="formActions">
             <button class="btn primary" id="submitBtn" type="submit">Enviar y abrir WhatsApp →</button>
-            <span class="note">Si no pegaste la URL de Sheets, igual abre WhatsApp.</span>
           </div>
         </form>
       </div>
