--- a/index.html
+++ b/index.html
@@ -868,7 +868,7 @@
       <div class="panel heroRight">
         <div class="photoFrame">
           <!-- Reemplazá "tu-foto.jpg" por tu foto (puede ser URL o archivo en tu hosting) -->
-          <img src="Gk-web/tu-foto.jpg" alt="Foto de Gerónimo" onerror="this.style.display='none'; this.parentElement.querySelector('.photoFallback').style.display='flex';" />
+          <img src="tu-foto.jpg" alt="Foto de Gerónimo" onerror="this.style.display='none'; this.parentElement.querySelector('.photoFallback').style.display='flex';" />
           <div class="photoFallback" style="display:none; position:absolute; inset:0; align-items:center; justify-content:center; color:rgba(244,245,247,.65); font-weight:700; letter-spacing:.08em;">
             PONÉ TU FOTO (tu-foto.jpg)
           </div>
