--- a/index.html
+++ b/index.html
@@ -206,6 +206,9 @@
   pointer-events:none;
   z-index:0;
 }
+    .photoFrame{
+  box-shadow: 0 24px 90px rgba(0,0,0,.55);
+}
 
 /* Asegura que la imagen quede arriba del halo */
 .photoFrame img,
