--- a/index.html
+++ b/index.html
@@ -905,7 +905,7 @@
           </div>
           <div class="photoOverlay">
             <b>Gerónimo Kombolitis</b>
-            <span>Empresario joven · Construyendo estándar LATAM</span>
+            <span>Emprendedor  · Construyendo estándar LATAM</span>
           </div>
         </div>
 
@@ -1042,7 +1042,7 @@
 
     <div class="cinemaDivider" aria-hidden="true"></div>
 
-    <section class="panel section reveal" id="prueba">
+   <!--<section class="panel section reveal" id="prueba">
       <h2>Prueba social (poné tu realidad)</h2>
       <p>Acá podés sumar testimonios o resultados. Te dejo 2 espacios listos (editables).</p>
 
@@ -1056,13 +1056,13 @@
           <span>— Cliente / Dueño (poné nombre + país)</span>
         </div>
       </div>
-    </section>
+    </section>-->
 
     <div class="cinemaDivider" aria-hidden="true"></div>
 
     <section class="panel section reveal" id="redes">
       <h2>Redes (seguime y mirá el proceso)</h2>
-      <p>Documentación real, postura, y construcción del estándar. Sin acting.</p>
+      <p>Documentación real, postura, y construcción del estándar.</p>
 
       <div class="socialRow">
         <a class="socialBtn" id="igBtn" href="#" target="_blank" rel="noopener"><span class="i">IG</span>Instagram</a>
@@ -1176,7 +1176,6 @@
 
           <div class="formActions">
             <button class="btn primary" id="submitBtn" type="submit">Enviar y abrir WhatsApp →</button>
-            <span class="note">Si no pegaste la URL de Sheets, igual abre WhatsApp.</span>
           </div>
         </form>
       </div>
@@ -1184,8 +1183,6 @@
 
     <footer>
       <span>© <span id="year"></span> Gerónimo Kombolitis</span>
-      <span>Minimal · Disruptivo · Ejecución</span>
-      <span>Contacto: WhatsApp</span>
     </footer>
   </div>
 
