--- a/index.html
+++ b/index.html
@@ -1001,7 +1001,6 @@
           <p>Querés local, pero con estructura. Evitar errores caros y arrancar con sistema.</p>
         </div>
       </div>
-
       <div class="metricRow">
         <div class="metric"><div class="num">0%</div><div class="label">humo</div></div>
         <div class="metric"><div class="num">100%</div><div class="label">sistema</div></div>
@@ -1244,8 +1243,8 @@
     // ==========================
     const LINKS = {
       instagram: "https://instagram.com/gerokombolitis",
-      tiktok: "https://www.tiktok.com/@gerokombolitis",
-      youtube: "https://www.youtube.com/@gerokombolitis"
+      tiktok: "https://www.tiktok.com/@geronimokombolitis.",
+      youtube: "https://www.youtube.com/@geronimokombolitis"
     };
 
     const igBtn = document.getElementById('igBtn');
