--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@
   <title>Gerónimo Kombolitis | Del Sillón al Sistema</title>
   <meta name="description" content="Aplicá a un diagnóstico estratégico para convertir tu barbería en una empresa real. Sistemas, números y ejecución. Estándar LATAM." />
   <meta name="theme-color" content="#0b0b10" />
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YLPBD9X4CH"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-YLPBD9X4CH');
+</script>
   <style>
     :root{
       --bg:#0b0b10;
