--- a/index.html
+++ b/index.html
@@ -941,7 +941,7 @@
 
       <div class="videoWrap">
         <!-- Reemplazá el ID por tu video de YouTube. Ej: https://www.youtube.com/watch?v=VIDEO_ID -->
-        <iframe src="https://youtu.be/pHg8Ql6s9wU?si=3MHJ-Qg2AkMcTwK3" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe src="https://youtube.com/watch?v=pHg8Ql6s9wU&si=3MHJ-Qg2AkMcTwK3" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </section>
 
